--- a/modules/administration/pages/ansible-setup-control-node.adoc
+++ b/modules/administration/pages/ansible-setup-control-node.adoc
@@ -52,7 +52,7 @@ For executing remediations you need to install the SCAP security guide package o
 | Supported Systems
 
 | scap-security-guide
-| OpenSUSE, SLES12, SLES15
+| {opensuse}, SLES12, SLES15
 
 | scap-security-guide-redhat
 | CentOS 7, CentOS 8, Fedora, Oracle Linux 7, Oracle Linux 8, RHEL7, RHEL8, RHEL9, Red Hat OpenStack Platform 10, Red Hat OpenStack Platform 13, Red Hat Virtualization 4, Scientific Linux
