--- a/modules/client-configuration/pages/clients-opensuseleap.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleap.adoc
@@ -25,7 +25,7 @@ ifeval::[{suma-content} == true]
 
 [[opensuse-channels-wizard]]
 [cols="1,1", options="header"]
-.OpenSUSE Products - WebUI
+.{opensuse} Products - WebUI
 |===
 
 | OS Version
@@ -55,7 +55,7 @@ The channels you need for this procedure are:
 
 [[opensuse-channels-cli]]
 [cols="1,1", options="header"]
-.OpenSUSE Channels - CLI
+.{opensuse} Channels - CLI
 |===
 
 | OS Version | Base Channel
