--- a/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
@@ -22,7 +22,7 @@ ifeval::[{suma-content} == true]
 // WARNING: The product names and channels for SCC here are a guess, and could change. Make sure you review them before publishing this for SUSE Manager!!!
 [[opensuse-channels-wizard]]
 [cols="1,1", options="header"]
-.OpenSUSE Products - WebUI
+.{opensuse} Products - WebUI
 |===
 
 | OS Version
@@ -43,7 +43,7 @@ The channels you need for this procedure are:
 
 [[opensuse-channels-cli]]
 [cols="1,1", options="header"]
-.OpenSUSE Channels - CLI
+.{opensuse} Channels - CLI
 |===
 
 | OS Version | Base Channel
@@ -60,7 +60,7 @@ ifeval::[{uyuni-content} == true]
 [[opensuse-channels-cli]]
 
 [cols="1,1,1,1", options="header"]
-.OpenSUSE Channels - CLI
+.{opensuse} Channels - CLI
 |===
 
 | OS Version
