backport43 - Replaced mixed spellings of openSUSE with the attribute {opensuse}

--- a/modules/retail/pages/retail-uyuni-branchserver.adoc
+++ b/modules/retail/pages/retail-uyuni-branchserver.adoc
@@ -23,7 +23,7 @@ The products you need for this procedure are:
 
 [[opensuse-channels-cli]]
 [cols="1,1,1,1,1,1,1,1", options="header"]
-.OpenSUSE Channels - CLI
+.{opensuse} Channels - CLI
 |===
 
 | OS Version
