backport42 - Replaced mixed spellings of openSUSE with the attribute {opensuse}

--- a/modules/client-configuration/pages/clients-opensuseleap.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleap.adoc
@@ -23,7 +23,7 @@ ifeval::[{suma-content} == true]
 
 [[opensuse-channels-wizard]]
 [cols="1,1", options="header"]
-.OpenSUSE Products - WebUI
+.{opensuse} Products - WebUI
 |===
 
 | OS Version
@@ -53,7 +53,7 @@ The channels you need for this procedure are:
 
 [[opensuse-channels-cli]]
 [cols="1,1", options="header"]
-.OpenSUSE Channels - CLI
+.{opensuse} Channels - CLI
 |===
 | OS Version | Base Channel
 | {opensuse} Leap 15.1 | opensuse-leap-15.1-pool
@@ -71,7 +71,7 @@ endif::[]
 ifeval::[{uyuni-content} == true]
 [[opensuse-channels-cli]]
 [cols="1,1,1,1,1,1", options="header"]
-.OpenSUSE Channels - CLI
+.{opensuse} Channels - CLI
 |===
 
 | OS Version
@@ -98,7 +98,7 @@ ifeval::[{uyuni-content} == true]
 |===
 
 [cols="1,1,1,1,1,1,1,1", options="header"]
-.OpenSUSE Channels - CLI
+.{opensuse} Channels - CLI
 
 |===
 
