--- a/modules/retail/pages/retail-uyuni-server-setup.adoc
+++ b/modules/retail/pages/retail-uyuni-server-setup.adoc
@@ -93,7 +93,7 @@ The products you need for this procedure are:
 
 [[opensuse-channels-cli]]
 [cols="1,1,1,1,1", options="header"]
-.OpenSUSE Channels - CLI
+.{opensuse} Channels - CLI
 |===
 
 | OS Version
