--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -15,6 +15,7 @@ ifeval::[{suma-content} == true]
 ** xref:workflow-inplace-sles-upgrade.adoc[In-place Upgrade]
 endif::[]
 
+** xref:workflow-removing-channel.adoc[OM: Removing channel]
 ** xref:workflow-sp-upgrade-webui.adoc[SP Upgrade via {webui}]
 ** xref:workflow-onboarding.adoc[Onboarding]
 
