--- a/modules/administration/pages/ansible-setup-control-node.adoc
+++ b/modules/administration/pages/ansible-setup-control-node.adoc
@@ -5,7 +5,7 @@ To setup an Ansible control node, execute the following steps from the {productn
 
 .Procedure: Setup an Ansible control node
 
-. From the {webui} under menu:Admin[Setup Wizard > Products], verify that the product [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64`` channel and [literal]``SUSE Manager Client Tools for {sles} 15 x86_64`` are installed and synchronized.
+. From the {webui} under menu:Admin[Setup Wizard > Products], verify that [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64`` and [literal]``SUSE Manager Client Tools for SLE 15 x86_64`` are selected and synchronized.
 
 . Deploy a {sles} 15 SP5 client.
 
@@ -25,7 +25,6 @@ The {productname} client tools contain the Ansible package.
 . Navigate to the client overview page, select menu:State[Highstate], and click btn:[Apply Highstate].
 
 . Select the menu:Events[] tab and verify the status of the highstate.
-
 
 
 
