improve admon according to https://github.com/uyuni-project/uyuni-docs/pull/2091

--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -130,7 +130,7 @@ TAG=latest
 
 [IMPORTANT]
 ====
-Do not change the [literal]``TAG`` value without knowing what you are doing or having been instructed to do it.
+Changing the [path]``uyuni-proxy-systemd-services.config`` file and especially the [literal]``TAG`` setting is dangerous and can cause a non-functional system.
 ====
 
 
