--- a/modules/administration/pages/channel-management.adoc
+++ b/modules/administration/pages/channel-management.adoc
@@ -38,7 +38,7 @@ You can implement restrictions on the channel using the {webui}.
 . Navigate to the [guimenu]``Subscribers`` tab and select or deselect users as required.
 
 
-
+[[delete_channels]]
 == Delete Channels
 
 You can delete vendor software channels from the command prompt.
