--- a/modules/common-workflows/pages/workflow-removing-channel.adoc
+++ b/modules/common-workflows/pages/workflow-removing-channel.adoc
@@ -21,7 +21,7 @@ Manual channel removal consists of the following phases:
 === Preparing to remove a channel
 
 Before removing a channel, you must identify the label for the channel to be removed.
-It can be done via {webui} or the command line.
+It can be done with {webui} or on the command line.
 
 [IMPORTANT]
 ====
