--- a/modules/common-workflows/pages/workflow-removing-channel.adoc
+++ b/modules/common-workflows/pages/workflow-removing-channel.adoc
@@ -35,7 +35,8 @@ It can be done with {webui} or on the command line.
 .Procedure: Identifying channel labels using {webui}
 [role=procedure]
 . In the SUSE Manager {webui}, in the sidebar navigate to menu:Software[Channel List > All]
-. This page displays the [label]``Channel Name``. If you select the blue link for a channel name, you will see the field for [literal]``Channel Label``.
+. This page displays the [label]``Channel Name``.
+  If you select the link for a channel name, you will see the field for [literal]``Channel Label``.
 . Identify the channel, and child channels, to be removed.
 
 
