--- a/modules/common-workflows/pages/workflow-removing-channel.adoc
+++ b/modules/common-workflows/pages/workflow-removing-channel.adoc
@@ -43,7 +43,7 @@ It can be done with {webui} or on the command line.
 .Procedure: Identifying channel labels using the command line
 [role=procedure]
 
-. You can get a quick list of channels by running the following command:
+. You can get a list of channels by running the following command:
 +
 ----
 spacewalk-remove-channel -l
