--- a/modules/common-workflows/pages/workflow-removing-channel.adoc
+++ b/modules/common-workflows/pages/workflow-removing-channel.adoc
@@ -72,7 +72,7 @@ spacecmd -- softwarechannel_listsystems <Channel Label>
 === Removing channel
 
 A channel, with its metadata, can be removed in the SUMA command line by using the [literal]``spacewalk-remove-channel`` command. 
-Keep in mind that this command does not remove the packages themselves from the filesystem. 
+This command does not remove the packages themselves from the filesystem. 
 
 Removing packages from the filesystem is described in <<cleaning-up-channel-packages>>.
 
