--- a/modules/common-workflows/pages/workflow-removing-channel.adoc
+++ b/modules/common-workflows/pages/workflow-removing-channel.adoc
@@ -99,7 +99,7 @@ spacewalk-remove-channel -c channel-label1 -c channel-label2
 ==== Removing a Parent and all its Children
 
 .Procedure: Removing a Parent and all its Children
-. It's also possible to remove a parent channel with all of its children, like this:
+. It is also possible to remove a parent channel with all of its children, like this:
 +
 ----
 spacewalk-remove-channel -a sles12-sp5-pool-x86_64
