Fixes following initial feedback.

--- a/modules/common-workflows/pages/workflow-removing-channel.adoc
+++ b/modules/common-workflows/pages/workflow-removing-channel.adoc
@@ -109,9 +109,9 @@ spacewalk-remove-channel -a sles12-sp5-pool-x86_64
 [[cleaning-up-channel-packages]]
 === Cleaning up channel packages
 
-==== Running the sync
+==== Running the synchronization
 
-.Procedure: Running the sync
+.Procedure: Running the synchronization
 . After removing a channel, run the command ``spacewalk-repo-sync`` on all remaining channels, or wait for the operation to complete automatically.
 . Alternatively, for all currently added channels running the following command:
 +
