--- a/modules/common-workflows/pages/workflow-removing-channel.adoc
+++ b/modules/common-workflows/pages/workflow-removing-channel.adoc
@@ -96,10 +96,10 @@ spacewalk-remove-channel -c channel-label1 -c channel-label2
 ----
 
 
-==== Removing a Parent and all its Children
+==== Removing a parent and all its child channels
 
-.Procedure: Removing a Parent and all its Children
-. It is also possible to remove a parent channel with all of its children, like this:
+.Procedure: Removing a parent and all its child channels
+. It is also possible to remove a parent channel with all of its child channels, like this:
 +
 ----
 spacewalk-remove-channel -a sles12-sp5-pool-x86_64
