--- a/modules/common-workflows/pages/workflow-removing-channel.adoc
+++ b/modules/common-workflows/pages/workflow-removing-channel.adoc
@@ -59,7 +59,7 @@ spacewalk-remove-channel -l
 . Check the [literal]``Systems`` column for the channel, or any child channels, that you want to remove.
 
 
-.Procedure: Verify Channel System Subscriptions using the command line
+.Procedure: Verify channel system subscriptions using the command line
 
 . Run the following command:
 +
@@ -122,7 +122,7 @@ mgr-sync refresh --refresh-channels
 
 ==== Remove packages from the database via the {webui}
 
-.Procedure: Remove Packages from the database via the {webui}
+.Procedure: Remove packages from the database via the {webui}
 . After removing the channel, you need to delete the packages from the database via the {webui}.
 . In the {productname} {webui} navigate to menu:SUSEManager[Software > Manage > Packages].
 . Select [literal]``Package in no channel``, and delete the packages.
