Add Debian 12 to documentation
Fixes #2353

--- a/modules/client-configuration/pages/clients-debian.adoc
+++ b/modules/client-configuration/pages/clients-debian.adoc
@@ -60,6 +60,7 @@ The products you need for this procedure are:
 | OS Version  | Product Name
 | {debian} 10 | Debian 10
 | {debian} 11 | Debian 11
+| {debian} 12 | Debian 12
 |===
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -75,6 +76,7 @@ The channels you need for this procedure are:
 | OS Version  | Product Name
 | {debian} 10 | debian-10-pool-amd64
 | {debian} 11 | debian-11-pool-amd64
+| {debian} 12 | debian-12-pool-amd64
 |===
 
 include::snippets/addchannels_vendor_cli.adoc[]
@@ -108,6 +110,12 @@ The channels you need for this procedure are:
 | debian-11-amd64-uyuni-client
 | debian-11-amd64-main-updates-uyuni
 | debian-11-amd64-main-security-uyuni
+
+| {debian} 12
+| debian-12-pool-amd64-uyuni
+| debian-12-amd64-uyuni-client
+| debian-12-amd64-main-updates-uyuni
+| debian-12-amd64-main-security-uyuni
 
 |===
 
