--- a/modules/snippets/pages/supported-client-systems-snippet.adoc
+++ b/modules/snippets/pages/supported-client-systems-snippet.adoc
@@ -70,6 +70,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {debian} 12
+| {x86_64}, {aarch64}, armv7l, i586
+| {cross}
+| {check}
+
 | {debian} 11
 | {x86_64}, {aarch64}, armv7l, i586
 | {cross}
@@ -203,6 +208,16 @@ ifeval::[{uyuni-content} == true]
 | {centos} 7
 | {x86_64}, {ppc64le}, {aarch64}
 | {check}
+| {check}
+
+| {debian} 12
+| {x86_64}, {aarch64}, armv7l, i586
+| {cross}
+| {check}
+
+| {debian} 11
+| {x86_64}, {aarch64}, armv7l, i586
+| {cross}
 | {check}
 
 | {debian} 10
