--- a/modules/client-configuration/pages/supported-features-debian.adoc
+++ b/modules/client-configuration/pages/supported-features-debian.adoc
@@ -25,172 +25,215 @@ The icons in this table indicate:
 | Feature
 | {debian}{nbsp}10
 | {debian}{nbsp}11
+| {debian}{nbsp}12
 
 | Client
+| {check}
 | {check}
 | {check}
 
 | System packages
 | {debian} Community
 | {debian} Community
+| {debian} Community
 
 | Registration
+| {salt}
 | {salt}
 | {salt}
 
 | Install packages
 | {salt}
 | {salt}
+| {salt}
 
 | Apply patches
+| {question}
 | {question}
 | {question}
 
 | Remote commands
 | {salt}
 | {salt}
+| {salt}
 
 | System package states
+| {salt}
 | {salt}
 | {salt}
 
 | System custom states
 | {salt}
 | {salt}
+| {salt}
 
 | Group custom states
+| {salt}
 | {salt}
 | {salt}
 
 | Organization custom states
 | {salt}
 | {salt}
+| {salt}
 
 | System set manager (SSM)
+| {salt}
 | {salt}
 | {salt}
 
 | Product migration
 | N/A
 | N/A
+| N/A
 
 | Basic Virtual Guest Management {star}
+| {salt}
 | {salt}
 | {salt}
 
 | Advanced Virtual Guest Management {star}
 | {salt}
 | {salt}
+| {salt}
 
 | Virtual Guest Installation (Kickstart), as Host OS
+| {cross}
 | {cross}
 | {cross}
 
 | Virtual Guest Installation (image template), as Host OS
 | {salt}
 | {salt}
+| {salt}
 
 | System deployment (PXE/Kickstart)
+| {cross}
 | {cross}
 | {cross}
 
 | System redeployment (Kickstart)
 | {cross}
 | {cross}
+| {cross}
 
 | Contact methods
+| {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
 
 | Works with {productname} Proxy
 | {salt}
 | {salt}
+| {salt}
 
 | Action chains
+| {salt}
 | {salt}
 | {salt}
 
 | Staging (pre-download of packages)
 | {salt}
 | {salt}
+| {salt}
 
 | Duplicate package reporting
+| {salt}
 | {salt}
 | {salt}
 
 | CVE auditing
 | {question}
 | {question}
+| {question}
 
 | SCAP auditing
+| {question}
 | {question}
 | {question}
 
 | Package verification
 | {cross}
 | {cross}
+| {cross}
 
 | Package locking
+| {check}
 | {check}
 | {check}
 
 | System locking
 | {cross}
 | {cross}
+| {cross}
 
 | Maintenance Windows
+| {check}
 | {check}
 | {check}
 
 | System snapshot
 | {cross}
 | {cross}
+| {cross}
 
 | Configuration file management
+| {salt}
 | {salt}
 | {salt}
 
 | Package profiles
 | {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
+| {salt}: Profiles supported, Sync not supported
 
 | Power management
+| {check}
 | {check}
 | {check}
 
 | Monitoring server
 | {cross}
 | {cross}
+| {cross}
 
 | Monitoring clients
+| {salt}
 | {salt}
 | {salt}
 
 | Docker buildhost
 | {question}
 | {question}
+| {question}
 
 | Build Docker image with OS
+| {salt}
 | {salt}
 | {salt}
 
 | Kiwi buildhost
 | {cross}
 | {cross}
+| {cross}
 
 | Build Kiwi image with OS
+| {cross}
 | {cross}
 | {cross}
 
 | Recurring Actions
 | {salt}
 | {salt}
+| {salt}
 
 | AppStreams
 | N/A
 | N/A
+| N/A
 
 | Yomi
+| N/A
 | N/A
 | N/A
 
