--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -58,7 +58,7 @@ Connecting the container host as a traditional client will not work because requ
 
 [IMPORTANT]
 ====
-To ensure that the domain name of the {productname} Server can be resolved by its clients.
+To ensure that domain name of the {productname} Server can be resolved by its clients.
 Both container proxy and client machines must be connected to a DNS server.
 Reverse lookups must work correctly.
 ====
