--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -108,7 +108,7 @@ zypper install uyuni-proxy-systemd-services
 {productname} Proxy containers require some volumes to be mounted for long term storage.
 Those volumes are automatically created by [literal]``podman`` and can be listed using the [command]``podman volume ls`` command.
 By default, [literal]``podman`` stores the files of the volumes in [path]``/var/lib/containers/storage/volumes``.
-The needed volume are named:
+The volumes are named:
 
 - [path]``uyuni-proxy-squid-cache``
 - [path]``uyuni-proxy-rhn-cache``
