--- a/modules/common-workflows/pages/workflow-removing-channel.adoc
+++ b/modules/common-workflows/pages/workflow-removing-channel.adoc
@@ -4,7 +4,7 @@
 
 == Use case
 
-This workflow shows how to manually remove SUSE provided channels from {productname} and to clean up end-of-life products, to reclaim space or for other purposes.
+This workflow shows how to manually remove {suse} provided channels from {productname} and to clean up end-of-life products, to reclaim space or for other purposes.
 
 
 
