Move changes from snippets to the requested adoc files

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -104,6 +104,10 @@ ifeval::[{suma-content} == true]
 | {x86_64}
 | {check}
 
+| {debian} 12
+| {x86_64}
+| {check}
+
 | {oracle} 7
 | {x86_64}, {aarch64}
 | {check}
@@ -226,6 +230,10 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {debian} 11
+| {x86_64}
+| {check}
+
+| {debian} 12
 | {x86_64}
 | {check}
 
