ansible dir is /etc/ansible
https://bugzilla.suse.com/show_bug.cgi?id=1213077
https://github.com/SUSE/spacewalk/issues/21971

--- a/modules/administration/pages/ansible-setup-control-node.adoc
+++ b/modules/administration/pages/ansible-setup-control-node.adoc
@@ -73,7 +73,7 @@ Therefore, you should create one inventory file for each distinct OS listed in _
 
 .Procedure: Creating the Ansible inventory files
 . Create and add your hosts to an inventory file to be managed by Ansible.
-  The default path for an Ansible inventory is `etc/ansible/hosts`.
+  The default path for an Ansible inventory is [path]``/etc/ansible/hosts``.
 +
 
 .Inventory Example
