--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -116,7 +116,7 @@ The volumes are named:
 
 To override the default volume settings, create the volumes prior to the first start of the pod using the [literal]``podman volume create`` command.
 
-In the [path]``/etc/sysconfig/uyuni-proxy-systemd-services.config`` file it is possible to add custom arguments passed to podman container pod:
+It is possible to add custom arguments passed to podman container pod to [path]``/etc/sysconfig/uyuni-proxy-systemd-services.config``:
 
 ----
 EXTRA_POD_ARGS=''
