--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -122,7 +122,7 @@ It is possible to add custom arguments passed to podman container pod to [path]`
 EXTRA_POD_ARGS=''
 ----
 
-In this file it is possible to modify the tag to use for the container images:
+In this file it is possible to modify tag to use for container images:
 
 ----
 TAG=latest
