--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -139,7 +139,7 @@ Changing the [path]``uyuni-proxy-systemd-services.config`` file and especially t
 
 By default, the {productname} Proxy suite is set to use the same image version and registry path for each of its services.
 However, it is possible to override the default values for a specific service.
-The [literal]``uyuni-proxy`` CLI bundled with the package, has an [command]``update image`` command  with the following parameters:
+The [literal]``uyuni-proxy`` CLI bundled with the package, runs [command]``update image`` with the following parameters:
 
 - [literal]``-s`` for the service name
 - [literal]``-t`` for the version tag
