--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -151,7 +151,7 @@ For example, use it like this:
 uyuni-proxy update image -s httpd -t 0.1.0 -r registry.opensuse.org/uyuni
 ----
 
-It would adjust a configuration file for the httpd service, taking [path]``registry.opensuse.org/uyuni`` as the registry and [literal]``0.1.0`` as the version tag and then restart it.
+It adjusts the configuration file for the httpd service, where [path]``registry.opensuse.org/uyuni`` is the registry and [literal]``0.1.0`` is the version tag, before restarting it.
 
 To reset the values to defaults, run the proxy reset command, specifying the service with the [literal]``-s`` parameter:
 
