--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -161,7 +161,7 @@ uyuni-proxy reset -s httpd
 
 This command would reset the configuration of the [literal]``httpd`` service to the global defaults and then restart it.
 
-For more information, see the [literal]``uyuni-proxy --help``.
+For more information, see [command]``uyuni-proxy --help``.
 
 
 
