address 6 and 7 of the bug

--- a/modules/administration/pages/ansible-setup-control-node.adoc
+++ b/modules/administration/pages/ansible-setup-control-node.adoc
@@ -93,10 +93,30 @@ client243.mgr.example.org
 [all:vars]
 ansible_ssh_private_key_file=/etc/ansible/my_ansible_private_key
 ----
+
+
+
+. In the {productname} {webui}, from the ansible control menu navigate to menu:Ansible[Control Node] to add inventory files to the control node.
+
+. Under the [literal]``Playbook Directories`` section add `/usr/share/scap-security-guide/ansible` to the [literal]``Add a Playbook Directories`` field and click btn:[Save].
+
+. Under [literal]``Inventory Files`` add your inventory file locations to the [literal]``Add an Inventory file`` field and click btn:[Save].
++
+.Examples
+----
+/etc/ansible/sles15
+/etc/ansible/sles12
+/etc/ansible/centos7
+----
 +
 
 For additional playbook examples, see https://github.com/ansible/ansible-examples.
 
+
+
+== Establish communication with the Ansible nodes
+
+.Procedure: Establishing communication with the Ansible nodes
 . Create the SSH keys that you are using in your inventory.
 +
 
@@ -121,22 +141,6 @@ ansible client240.mgr.example.org -m ping
 ----
 
 
-
-== Add inventory files to the Ansible control node
-
-.Procedure: Adding Ansible inventory files to the control node
-. From the ansible control menu select: menu:Ansible[Control Node].
-
-. Under the [literal]``Playbook Directories`` section add `/usr/share/scap-security-guide/ansible` to the [literal]``Add a Playbook Directories`` field and then click btn:[Save].
-
-. Under [literal]``Inventory Files`` add your inventory file locations to the [literal]``Add an Inventory file`` field and click btn:[Save].
-+
-.Examples
-----
-/etc/ansible/sles15
-/etc/ansible/sles12
-/etc/ansible/centos7
-----
 
 You may now run remediations.
 For more information, see xref:ansible-compliance-as-code.adoc[].
