document ansible_private_key file setting (per feedback)

--- a/modules/administration/pages/ansible-setup-control-node.adoc
+++ b/modules/administration/pages/ansible-setup-control-node.adoc
@@ -131,6 +131,16 @@ ssh-keygen -f /etc/ansible/my_ansible_private_key
 ssh-copy-id -i /etc/ansible/my_ansible_private_key root@client240.mgr.example.org
 ----
 
+. Declare the private key in [path]``/etc/ansible/ansible.cfg`` as follows:
++
+
+----
+private_key_file = /etc/ansible/my_ansible_private_key
+----
++
+
+Replace [path]``my_ansible_private_key`` with the name of the file containing the private key.
+
 . Test that Ansible is working by executing the following commands from the control node:
 +
 
