--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -12,7 +12,7 @@ Only {sles} 15 SP3 and newer are supported to be used as container host for {pro
 endif::[]
 ====
 
-The container host must be connected to the manager as a Salt client.
+The container host must be connected to {productname} as a {salt} client.
 Connecting the container host as a traditional client will not work because required packages will not be available.
 
 
