--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -13,7 +13,7 @@ endif::[]
 ====
 
 The container host must be connected to {productname} as a {salt} client.
-Connecting the container host as a traditional client will not work because required packages will not be available.
+Connecting container host as a traditional client will not work because required packages will not be available.
 
 
 
