--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -114,7 +114,7 @@ The volumes are named:
 - [path]``uyuni-proxy-rhn-cache``
 - [path]``uyuni-proxy-tftpboot``
 
-To override the default volume settings, create the volumes prior to the first start of the pod using the [literal]``podman volume create`` command.
+To override default volume settings, create the volumes prior to the first start of the pod using the  [command]``podman volume create`` command.
 
 It is possible to add custom arguments passed to podman container pod to [path]``/etc/sysconfig/uyuni-proxy-systemd-services.config``:
 
