--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -159,7 +159,7 @@ To reset the values to defaults, run the proxy reset command, specifying the ser
 uyuni-proxy reset -s httpd
 ----
 
-This command would reset the configuration of the [literal]``httpd`` service to the global defaults and then restart it.
+This command first resets the configuration of the [literal]``httpd`` service to the global defaults and then reloads it.
 
 For more information, see [command]``uyuni-proxy --help``.
 
