add changelog entry

--- a/modules/administration/pages/ansible-setup-control-node.adoc
+++ b/modules/administration/pages/ansible-setup-control-node.adoc
@@ -150,7 +150,11 @@ ansible mygroup1 -m ping
 ansible client240.mgr.example.org -m ping
 ----
 
-
-
 You may now run remediations.
 For more information, see xref:ansible-compliance-as-code.adoc[].
+
+
+// bsc#1213077 #9
+// section on how to create playbooks, and how to schedule their execution.
+// Add a description of the "Playbooks" tab, in general context.
+// There is a very summarized descriptions in next section "Compliance as code", but we // need a description of the playbooks tab that is independent of usage with openscap.
