--- a/modules/administration/pages/ansible-setup-control-node.adoc
+++ b/modules/administration/pages/ansible-setup-control-node.adoc
@@ -98,7 +98,7 @@ ansible_ssh_private_key_file=/etc/ansible/my_ansible_private_key
 
 . In the {productname} {webui}, from the Ansible control menu navigate to menu:Ansible[Control Node] to add inventory files to the control node.
 
-. Under the [literal]``Playbook Directories`` section add `/usr/share/scap-security-guide/ansible` to the [literal]``Add a Playbook Directories`` field and click btn:[Save].
+. Under the [literal]``Playbook Directories`` section add [literal]``/usr/share/scap-security-guide/ansible`` to the [literal]``Add a Playbook Directories`` field and click btn:[Save].
 
 . Under [literal]``Inventory Files`` add your inventory file locations to the [literal]``Add an Inventory file`` field and click btn:[Save].
 +
