Add information about supported key types for SSL certificates

--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -18,6 +18,7 @@ All files must be in PEM format.
 The host name of the SSL server certificate must match the fully qualified host name of the machine you deploy them on.
 You can set the host names in the ``X509v3 Subject Alternative Name`` section of the certificate.
 You can also list multiple host names if your environment requires it.
+Supported Key types are `RSA` and `EC` (Elliptic Curve).
 
 Third-party authorities commonly use intermediate CAs to sign requested server certificates.
 In this case, all CAs in the chain are required to be available.
