--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -16,9 +16,9 @@ Before you begin, ensure you have:
 All files must be in PEM format.
 
 The host name of the SSL server certificate must match the fully qualified host name of the machine you deploy them on.
-You can set the host names in the ``X509v3 Subject Alternative Name`` section of the certificate.
+You can set the host names in the [literal]``X509v3 Subject Alternative Name`` section of the certificate.
 You can also list multiple host names if your environment requires it.
-Supported Key types are `RSA` and `EC` (Elliptic Curve).
+Supported Key types are [literal]``RSA`` and [literal]``EC`` (Elliptic Curve).
 
 Third-party authorities commonly use intermediate CAs to sign requested server certificates.
 In this case, all CAs in the chain are required to be available.
