Corrections after initial review.

--- a/modules/common-workflows/pages/workflow-removing-channel.adoc
+++ b/modules/common-workflows/pages/workflow-removing-channel.adoc
@@ -34,7 +34,7 @@ It can be done with {webui} or on the command line.
 
 .Procedure: Identifying channel labels using {webui}
 [role=procedure]
-. In the SUSE Manager {webui}, in the sidebar navigate to menu:Software[Channel List > All]
+. In the {productname} {webui}, in the sidebar navigate to menu:Software[Channel List > All].
 . This page displays the [label]``Channel Name``.
   If you select the link for a channel name, you will see the field for [literal]``Channel Label``.
 . Identify the channel, and child channels, to be removed.
@@ -106,18 +106,19 @@ spacewalk-remove-channel -a sles12-sp5-pool-x86_64
 ----
 
 
-[[cleaning-up-channel-packages]]
-=== Cleaning up channel packages
+// Initially part of the file handed over by the SME, but this step is not directly related to the removal of channels.
+//[[cleaning-up-channel-packages]]
+//=== Cleaning up channel packages
 
-==== Running the synchronization
+//==== Running the synchronization
 
-.Procedure: Running the synchronization
-. After removing a channel, run the command ``spacewalk-repo-sync`` on all remaining channels, or wait for the operation to complete automatically.
-. Alternatively, for all currently added channels running the following command:
-+
-----
-mgr-sync refresh --refresh-channels
-----
+//.Procedure: Running the synchronization
+//. After removing a channel, run the command ``spacewalk-repo-sync`` on all remaining channels, or wait for the operation to complete automatically.
+//. Alternatively, for all currently added channels running the following command:
+//+
+//----
+//mgr-sync refresh --refresh-channels
+//----
 
 
 ==== Remove packages from the database via the {webui}
@@ -129,7 +130,7 @@ mgr-sync refresh --refresh-channels
 
 
 
-==== Clean the packages From the filesystem
+==== Clean the packages from the filesystem
 
 .Procedure: Clean the packages from the filesystem
 . The following command checks for anything that is still showing in the filesystem, but not in the SUMA database and then removes it.
