--- a/modules/common-workflows/pages/workflow-removing-channel.adoc
+++ b/modules/common-workflows/pages/workflow-removing-channel.adoc
@@ -10,11 +10,7 @@ This workflow shows how to manually remove {suse} provided channels from {produc
 
 == Step-by-step instructions
 
-Manual channel removal consists of the following phases:
-
-. <<preparing-to-remove-channel>>
-. <<removing-channels>>
-. <<cleaning-up-channel-packages>>
+Manual channel removal consists of <<preparing-to-remove-channel>> and <<removing-channel>>.
 
 
 [[preparing-to-remove-channel]]
