--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -14,6 +14,11 @@ endif::[]
 ifeval::[{suma-content} == true]
 ** xref:workflow-inplace-sles-upgrade.adoc[In-place Upgrade]
 endif::[]
+
+ifeval::[{suma-content} == true]
+** xref:workflow-removing-channel.adoc[Removing channel]
+endif::[]
+
 ** xref:workflow-sp-upgrade-webui.adoc[SP Upgrade via {webui}]
 ** xref:workflow-onboarding.adoc[Onboarding]
 
