Backport 43 - Adding workflow for manual channel removal.

--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -17,6 +17,9 @@ endif::[]
 ** xref:workflow-sp-upgrade-webui.adoc[SP Upgrade via {webui}]
 ** xref:workflow-onboarding.adoc[Onboarding]
 
+ifeval::[{suma-content} == true]
+** xref:workflow-removing-channel.adoc[Removing channel]
+endif::[]
 
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
