--- a/modules/administration/pages/channel-management.adoc
+++ b/modules/administration/pages/channel-management.adoc
@@ -67,4 +67,4 @@ mgr-sync sync channel <channel-name>
 
 == Related topics
 
-* For more information about deleting channels manually, see see xref:common-workflows:workflow-removing-channel.adoc[].
+* For more information about deleting channels manually, see xref:common-workflows:workflow-removing-channel.adoc[].
