backport43 - Workflow: describing old channels removal (#2363)
* Backport 43 - Adding workflow for manual channel removal.

* Update modules/administration/pages/channel-management.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

---------

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/administration/pages/channel-management.adoc
+++ b/modules/administration/pages/channel-management.adoc
@@ -39,6 +39,7 @@ You can implement restrictions on the channel using the {webui}.
 
 
 
+[[delete_channels]]
 == Delete Channels
 
 You can delete vendor software channels from the command prompt.
@@ -63,3 +64,7 @@ spacewalk-remove-channel -c <channel-name>
 ----
 mgr-sync sync channel <channel-name>
 ----
+
+== Related topics
+
+* For more information about deleting channels manually, see xref:common-workflows:workflow-removing-channel.adoc[].
