--- a/modules/administration/pages/channel-management.adoc
+++ b/modules/administration/pages/channel-management.adoc
@@ -63,3 +63,9 @@ spacewalk-remove-channel -c <channel-name>
 ----
 mgr-sync sync channel <channel-name>
 ----
+
+
+== Related topics
+
+* For more information about deleting channels manually, see xref:common-workflows:workflow-removing-channel.adoc[].
+
