--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -14,7 +14,7 @@ endif::[]
 ====
 
 The container host must be connected to {productname} as a {salt} client.
-Connecting container host as a traditional client will not work because required packages will not be available.
+Connecting the container host as a traditional client will not work because required packages will not be available.
 
 
 
